# unity-app-generator

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.txt  README.md  build_ogc_app.py  mcp_git_clone.sh  process_repo.py  pyproject.toml  requirements.txt  setup.py
docker/: DockerInstructions.md  Dockerfile  README.md  appgen_dag.py  docker_apg_entrypoint.sh
insideDocker/: Dockerfile
unity_app_generator/: __main__.py  ecr_helper.py  generator.py  interface.py  state.py
